--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
 		<dependency>
 			<groupId>io.mosip.vercred</groupId>
 			<artifactId>vcverifier</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	
@@ -270,7 +270,6 @@
             </snapshots>
         </repository>
     </repositories>
-	
 	<distributionManagement>
                 <snapshotRepository>
                         <id>ossrh</id>
