--- a/src/main/resources/application-local1.properties
+++ b/src/main/resources/application-local1.properties
@@ -131,3 +131,5 @@ mosip.print.crypto.p12.password=password@123
 mosip.print.crypto.p12.alias=partner
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip',idrepo:'mosip'}
+mosip.send.uin.default-emailIds=
+mosip.send.uin.email.attachment.enabled=true
